# HierarchicalPrune

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .shellcheckrc  LICENSE  README.md  cont_analysis.py  distil_flux.py  distil_sd3.py  eval.py  finetune_sd3.py  infer.py  infer_dcae_sd3.py  pyproject.toml  requirements.txt
LICENSES/: LICENSE_BKSDM
assets/precomputed_metrics/hpsv2/: stable-diffusion-3.5-large-turbo.json
configs/: val_prompts.yml
data/: utils.py  ye_pop.py
docs/: .jsbeautifyrc  index.html
docs/static/css/: index.css
docs/static/js/: index.js
metrics/: prepare_geneval.sh  requirements_cu124.txt  test_geneval.sh
model/: big_modeling.py  builder.py  hook.py  modeling_utils.py  transformers.py
model/dc_ae/efficientvit/models/efficientvit/: dc_ae.py
notebooks/: profiling_transformers_mem.ipynb
pipelines/: pipeline_dcae_flux.py  pipeline_dcae_stable_diffusion_3.py
profilers/: memory_flux.py  memory_sd3.py  utils.py
scripts/: cont_analysis_flux.sh  cont_analysis_flux_fine-grained.sh  cont_analysis_others.sh  cont_analysis_others_fine-grained.sh  cont_analysis_sd3L.sh  cont_analysis_sd3L_fine-grained.sh  eval_flux.sh  eval_sd3.sh  infer_flux.sh  infer_sd3.sh  run_distil_sd3.sh  run_distil_sd3L.sh  run_distil_sd3L_kd.sh  run_distil_sd3_kd.sh
utils/: args.py  attrdict_wrapper.py  identity_block.py  quantize.py  utils.py  ye_pop_to_webdataset.py
