[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hiprune"
version = "0.0.1"
description = "HierarchicalPrune"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "pre-commit",
    "torch",
    "torchvision",
    "torchaudio",
    "accelerate==1.3.0",
    "transformers==4.48.1",
    "deepspeed==0.16.2",
    "pytorch_lightning",
    "einops",
    "omegaconf",
    "ftfy",
    "tensorboard",
    "Jinja2",
    "matplotlib",
    "datasets",
    "peft",
    "wandb",
    "xformers",
    "bitsandbytes==0.45.5",
    "webdataset",
    "sentencepiece",
    "diffusers==0.32.2",
    "attrdict",
    "clint",
    "pyrallis",
    "open-clip-torch",
    "clip-benchmark",
    "image-reward==1.5",
    "clip @ git+https://github.com/openai/CLIP.git",
    "opencv-python",
]


[project.scripts]

[project.optional-dependencies]
dev = [
    "mdformat",
    "black",
    "isort",
]

[project.urls]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.setuptools.packages.find]
exclude = ["assets*", "configs*", "metrics*", "scripts*", "docs*"]

[tool.wheel]
exclude = ["assets*", "configs*", "metrics*", "scripts*", "docs*"]
